# liberty-go-server

./: CHANGELOG.md  LGS.db  LICENSE  README.md  cabal.project  default.nix  lgs.cabal  shell.nix  stack.yaml
common/: LICENSE  common.cabal
common/src/: GameDB.hs  LGSAPI.hs  OutputTypes.hs  PubSubTypes.hs  UserInput.hs
lgc/: lgc.cabal
lgc/css/: lgs.css
lgc/src/: LoginPage.hs  Main.hs  PageUtil.hs  PlayPage.hs  ProfilePage.hs  ProposeGamePage.hs  RegisterPage.hs  ServantClient.hs
lgs/: LGS.db  LICENSE  lgs.cabal
lgs/nix/: nixpkgs.nix  shell.nix
lgs/nix/haskell/: default.nix  overlay.nix
lgs/src/: AuthValidator.hs  Config.hs  GameApiImpl.hs  GameDB.hs  GameExpressions.hs  Main.hs  PubSub.hs  PubSubTypes.hs  RealTime.hs  UserInput.hs
lgs/tst/manual-calls/: propose-game.sh  register_user.sh
nix/: lgl.nix  reflex-platform.nix  servant-reflex.nix  shell.nix  sources.nix
nix/haskell/: default.nix  gdp.nix  lgl.nix
server/: GameApiImpl.hs  GameDB.hs  GameExpressions.hs  Main.hs  shoppingcart1.db
tst/manual-calls/: accept-game-proposal.sh  place-stone.sh
