name:               lgs
version:            0.1.0.0
license-file:       LICENSE
author:             maxfield-chen
maintainer:         maxfieldchen@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md
cabal-version:      >= 1.10

executable lgs
  main-is:          Main.hs
  if impl(ghcjs)
     buildable: False
  hs-source-dirs:   src
  build-depends:    base
                  , HUnit
                  , aeson
                  , attoparsec
                  , base-compat
                  , beam-core
                  , beam-migrate
                  , beam-sqlite
                  , blaze-html
                  , blaze-markup
                  , bytestring
                  , directory
                  , gdp                == 0.0.3.0
                  , http-media
                  , http-types
                  , lgl
                  , lens
                  , lucid
                  , mtl
                  , servant
                  , servant-lucid
                  , servant-server
                  , sort
                  , string-conversions
                  , sqlite-simple
                  , text
                  , time
                  , transformers
                  , wai
                  , warp
  default-language: Haskell2010
