name:               lgs
version:            0.1.0.0
license-file:       LICENSE
author:             maxfield-chen
maintainer:         maxfieldchen@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md
cabal-version:      >= 1.10

executable lgs
  main-is:          Main.hs
  if impl(ghcjs)
     buildable: False
  hs-source-dirs:   src
  build-depends:    base
                  , HUnit
                  , aeson
                  , async
                  , attoparsec
                  , base-compat
                  , beam-core
                  , beam-sqlite
                  , bytestring
                  , common
                  , containers
                  , unordered-containers
                  , jose
                  , directory
                  , gdp                == 0.0.3.0
                  , http-media
                  , http-types
                  , lgl
                  , lens
                  , mtl
                  , servant
                  , servant-auth-server
                  , servant-server
                  , sort
                  , string-conversions
                  , stm
                  , sqlite-simple
                  , text
                  , time
                  , transformers
                  , wai
                  , wai-websockets
                  , websockets
                  , warp
  default-language: Haskell2010
